Did the rest of the hero classes on an initial pass. Might go back & add a little more flexibility to some of the earlier classes (& clarify some language), definitely need to rescale the stat requirements for skill mastery.

--- a/Races.html
+++ b/Races.html
@@ -194,11 +194,17 @@
   <li>TBS Reqs: Warrior Mage - 2Atk/2Pow/1Kno, Bas Any Magic; Battle Mage - 5Atk/3Def/5Pow/3Kno, Exp any magic, Adv
       any other magic, Exp 1 Battle skill</li>
   <li>Death Knight - Dread Knight</li>
-  <li>RPG Reqs: </li>
-  <li>TBS Reqs: </li>
-  <li>Herbalist - Alchemist</li>
-  <li>RPG Reqs: </li>
-  <li>TBS Reqs: </li>
+  <li>RPG Reqs: Death Knight, 40 Mgt/End/Acc/Int/Per, Adv any melee weapon, Adv Death Magic (HARD REQ), Adv
+      chain/plate; Dread Knight - 70 Mgt/End/Acc/Int/Per, Exp any melee weapon, Exp Death Magic (HARD REQ), Exp
+      chain/plate, Adv 1 more magic.</li>
+  <li>TBS Reqs: Death Knight - 1Atk/1Def/1Pow/1Kno, Bas Death Magic (HARD REQ), Bas 1 Battle skill; Dread Knight -
+      5Atk/5Def/3Pow/3Kno, Exp Death Magic (HARD REQ), Adv 2 Battle skills.</li>
+  <li>Elementalist - Planeswalker</li>
+  <li>RPG Reqs: Elementalist - 40 Mgt/End/Spd/Acc/Int, Adv 1 elemental magic, Adv any armor OR Shield, Adv any
+      weapon; Planeswalker - 80 Mgt/Int, 70 End/Spd, 50 Acc, Mas 1 elemental magic, Exp any armor OR Shield, Exp
+      any weapon (might redo this to allow more flexibility)</li>
+  <li>TBS Reqs: Elementalist - 1Atk/1Def/1Pow/1Kno, Bas any elemental magic, Bas 1 Battle skill; Planeswalker -
+      8Atk+Def/8Pow+Kno, Mas any elemental magic, Exp 1 OR Adv 2 any non-magic skills.</li>
 </ul>
 <h3>Magic-Focused</h3>
 <ul>
@@ -207,17 +213,26 @@
   <!-- RPG - First promo: stats 100 total above avg, 3 masteries above Bas; Second: 250 stats, 7 masteries -->
   <!-- TBS - First promo (where heroes start): 4-5 stat req, 1-2 skill req; Second: 16 stat, 7-8 skill -->
   <li>Summoner - Heretic</li>
-  <li>RPG Reqs: </li>
-  <li>TBS Reqs: </li>
+  <li>RPG Reqs: Summoner - 50 Int/Spd, 40 Acc/Lck, Exp Fire Magic, Adv Meditaion, Bas any armor or Dodging; Heretic -
+      80 Int/Spd, 70 Acc/Lck, 50 End, Mas Fire Magic, Exp Mediation, Adv any armor or Dodging, Adv Learning.</li>
+  <li>TBS Reqs: Summoner - 2Pow/2Kno, Bas Fire Magic; Heretic - 2Atk/2Def/7Pow/5Kno, Exp Fire Magic, Adv
+      Intelligence, Adv Learning.</li>
   <li>Cleric - Priest of Life</li>
-  <li>RPG Reqs: </li>
-  <li>TBS Reqs: </li>
+  <li>RPG Reqs: Cleric - 50 Per/Acc, 40 End/Int, Adv Life Magic, Adv any armor OR Shield, Adv Mace OR Staff; Priest
+      of Life - 100 Per, 80 End/Acc, 70 Int, Mas Life Magic, Adv any armor OR Shield, Adv Mace OR Staff, Adv all 3
+      Self Magics.</li>
+  <li>TBS Reqs: Cleric - 1Def/2Pow/2Kno, Bas Life Magic; Priest of Life - 3Def/4Pow/7Kno, Exp Life Magic, Adv all 3
+      Self Magics.</li>
   <li>Shaman - Witch</li>
-  <li>RPG Reqs: </li>
-  <li>TBS Reqs: </li>
-  <li>Elementalist - Planeswalker</li>
-  <li>RPG Reqs: </li>
-  <li>TBS Reqs: </li>
+  <li>RPG Reqs: Shaman - 40 Acc/Spd/Int/Per/Lck, Adv Earth/Water Magic, Adv Wand/Staff; Witch - 80 Int/Acc,
+      70 Per/Lck, 50 Spd, Exp Earth/Water, Exp Wand/Staff, Exp 1 OR Adv 2 of self/life/death magics.</li>
+  <li>TBS Reqs: Shaman - 2Pow/2Kno, Bas Earth/Water Magic; Witch - 1Atk/2Def/6Pow/7Kno, Exp Earth/Water, Adv 1
+      self/life/death magic.</li>
+  <li>Herbalist - Alchemist</li>
+  <li>RPG Reqs: Herbalist - 50 Int/Acc, 40 End/Per, Exp Alchemy, Adv any armor; Alchemist - 80 Int/Acc, 70 End/Per,
+      50 Lck, Mas Alchemy, Exp any armor, Adv ID Item OR Monster, Adv any 1 magic.</li>
+  <li>TBS Reqs: Herbalist - 1Def/1Pow/2Kno, Bas Mysticism; Alchemist - 3Atk/3Def/5Pow/5Kno, Adv Mysticism, Adv any
+      magic, Adv Armorer OR First Aid.</li>
 </ul>
 <h3>All-Magic</h3>
 <ul>
@@ -226,16 +241,25 @@
   <!-- RPG - First promo: stats 100 total above avg, 3 masteries above Bas; Second: 250 stats, 7 masteries -->
   <!-- TBS - First promo (where heroes start): 4-5 stat req, 1-2 skill req; Second: 16 stat, 7-8 skill -->
   <li>Sorcerer - Warlock</li>
-  <li>RPG Reqs: </li>
-  <li>TBS Reqs: </li>
-  <li>Wizard - Archmage</li>
-  <li>RPG Reqs: </li>
-  <li>TBS Reqs: </li>
-  <li>Necromancer - Grand Necromancer or High Lich</li>
-  <li>RPG Reqs: </li>
-  <li>TBS Reqs: </li>
+  <li>RPG Reqs: Sorcerer - 50 Int/Spd, 40 Per/Acc, Exp any 1 OR Adv any 2 magics, Adv Staff OR Wand; Warlock - 90
+      Int/Spd, 80 Acc, 70 Per, Mas any 1 magic, Exp any 1 other magic, Exp Staff OR Wand.</li>
+  <li>TBS Reqs: Sorcerer - 3Pow/2Kno, Bas any magic, Bas any other magical skill; Warlock - 9Pow/7Kno, Exp any 1
+      magic, Adv any 2 magical skills.</li>
+  <li>Wizard - High Wizard</li>
+  <li>RPG Reqs: Wizard - 50 Int/Per, 40 Spd/Acc, Exp any 1 OR Adv any 2 elemental magics, Adv Staff OR Wand; High
+      Wizard - 90 Int, 80 Per/Spd/Acc, Exp any 2 magics, Exp Staff OR Wand, Adv Learning.</li>
+  <li>TBS Reqs: Wizard - 2Pow/3Kno, Bas any magic school, Bas any other magical skill; High Wizard - 7Pow/9Kno, Exp
+      any magic school, Exp any other magical skill, Adv Learning OR Scholar.</li>
+  <li>Necromancer - Grand Necromancer</li>
+  <li>RPG Reqs: Necromancer - 50 Int/Per, 40 Spd/Acc, Exp Death Magic (HARD REQ), Adv any other magic OR Staff OR
+      Wand; Grand Necromancer - 80 Int/Per, 70 Spd/Acc, 50 Lck, Mas Death Magic (HARD REQ), Exp any other magic OR
+      Staff OR Wand, Adv Meditation.</li>
+  <li>TBS Reqs: Necromancer - 2Pow/2Kno, Adv Death Magic (HARD REQ); Grand Necromancer - 8Pow/8Kno, Exp Death Magic
+      (HARD REQ), Adv 2 other magical skills.</li>
   <li>Druid - Grand Druid</li>
-  <li>RPG Reqs: </li>
+  <li>RPG Reqs: Druid - 50 Per/Acc, 40 Int/Spd, Adv any elemental magic, Adv any self OR Life magic, Adv
+      Meditation, Bas Alchemy; Grand Druid - 80 Per/Acc, 70 Int/Spd, 50 Lck, Exp any elemental magic, Exp any self OR
+      Life magic, Exp Meditation, Adv Alchemy, Adv ID Item OR ID Monster OR Learning</li>
   <li>TBS Reqs: </li>
 </ul>
 </body>
