--- a/Skills.html
+++ b/Skills.html
@@ -75,6 +75,7 @@
   <li>Spear - Mgt main / Acc main</li>
   <li>Staff - Acc main / Spd aux</li>
   <li>Sword - Mgt main / Spd main</li>
+  <li>Wand - Int main/Per main</li>
   <li>Unarmed - Mgt main / End main</li>
   <li>Armsmaster - Spd main / Mgt aux</li>
 </ul>
