Started on Items & made minor changes to Skills & Races accordingly. Probably will save adding actual items to when we're beyond text mode.

--- a/Overview.html
+++ b/Overview.html
@@ -16,6 +16,7 @@
   <li><a href="Combat.html">Combat Mechanics</a></li>
   <li><a href="Skills.html">Skills & Stats</a></li>
   <li><a href="Spells.html">Spells</a></li>
+  <li><a href="Items.html">Items, Artifacts & Relics</a></li>
   <li><a href="Races.html">Races & Classes</a></li>
   <li><a href="Crafting.html">Crafting System</a></li>
 </ul>
