--- a/Races.html
+++ b/Races.html
@@ -252,7 +252,7 @@
       any magic school, Exp any other magical skill, Adv Learning OR Scholar.</li>
   <li>Necromancer - Grand Necromancer</li>
   <li>RPG Reqs: Necromancer - 50 Int/Per, 40 Spd/Acc, Exp Death Magic (HARD REQ), Adv any other magic OR Staff OR
-      Wand; Grand Necromancer - 80 Int/Per, 70 Spd/Acc, 50 Lck, Mas Death Magic (HARD REQ), Exp any other magic OR
+      Wand; Grand Necromancer - 100 Int, 80 Per, 70 Spd/Acc, Mas Death Magic (HARD REQ), Exp any other magic OR
       Staff OR Wand, Adv Meditation.</li>
   <li>TBS Reqs: Necromancer - 2Pow/2Kno, Adv Death Magic (HARD REQ); Grand Necromancer - 8Pow/8Kno, Exp Death Magic
       (HARD REQ), Adv 2 other magical skills.</li>
